reset colors back to design

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -1281,7 +1281,7 @@ a[id^=grouptab]:active {
 #desktop_notifications div.has-alerts h4 {
   font-size: 14px;
   font-weight: bold;
-  background-color: #000000;
+  background-color: #5D5670;
   line-height: 20px;
   border-top-left-radius: 2px;
   border-top-right-radius: 2px; }
