--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -3822,6 +3822,14 @@ td.dashlet-title > h3 > span {
   #content #tab-actions > ul.dropdown-menu li:last-of-type a {
     background-color: #F08377;
     border: none; }
+  #content #EditView_tabs .tab-content {
+    background-color: #ffffff;
+    padding: 24px;
+    border: 1px solid transparent;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    margin-bottom: 30px; }
   #content .detail-view .tab-content {
     background-color: #ffffff;
     padding: 24px;
@@ -3982,17 +3990,41 @@ table.subpanel-table ul.subpanel {
 table.subpanel-table .pagination li.sugar_action_button > form > a {
   width: 100%; }
 
-table.subpanel-table ul.subpanel > a,
-.single a,
-.single > a,
-#actionLinkTop li.sugar_action_button,
-#actionLinkBottom li.sugar_action_button,
-table.subpanel-table li.sugar_action_button,
-#selectLinkTop li.sugar_action_button,
-#selectLinkBottom li.sugar_action_button,
-table.subpanel-table .pagination .sugar_action_button,
-table.subpanel-table .pagination li.sugar_action_button > form > a,
-table.subpanel-table .pagination .sugar_action_button > form > a,
+.subpanel-table ul.subpanel > a {
+  padding: 0px;
+  background-color: #94A6B5;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding-right: 4px; }
+
+.subpanel-table li.sugar_action_button {
+  padding: 0px;
+  background-color: #94A6B5;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding-right: 4px; }
+
+table.subpanel-table .pagination .sugar_action_button {
+  padding: 0px;
+  background-color: #94A6B5;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding-right: 4px; }
+
+table.subpanel-table .pagination li.sugar_action_button > form > a {
+  padding: 0px;
+  background-color: #94A6B5;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding-right: 4px; }
+
+table.subpanel-table .pagination .sugar_action_button > form > a {
+  padding: 0px;
+  background-color: #94A6B5;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding-right: 4px; }
+
 table.subpanel-table .pagination .sugar_action_button > form > a {
   padding: 0px;
   background-color: #94A6B5;
@@ -4211,6 +4243,63 @@ table.subpanelTabForm {
 @media (min-width: 768px) {
   .panel-heading a div {
     width: 97.66%; } }
+ul.clickMenu li span.subhover {
+  cursor: pointer; }
+
+ul.clickMenu li ul.subnav,
+ul.clickMenu ul.subnav-sub,
+ul.SugarActionMenuIESub {
+  list-style: none;
+  position: absolute;
+  top: 20px;
+  margin: 0;
+  display: none;
+  float: left;
+  width: auto;
+  border: 1px solid transparent;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  padding: 8px 0;
+  z-index: 10;
+  overflow: hidden; }
+
+ul.clickMenu ul.subnav-sub,
+ul.SugarActionMenuIESub {
+  right: 0; }
+
+ul.clickMenu li ul.subnav {
+  margin-top: 4px;
+  min-width: 128px;
+  right: auto; }
+
+ul.clickMenu li ul.subnav li, ul.clickMenu ul.subnav-sub li, ul.SugarActionMenuIESub li {
+  margin: 0;
+  padding: 0;
+  clear: both;
+  width: 100%;
+  white-space: nowrap; }
+
+ul.clickMenu.subpanel.records li ul.subnav li a span {
+  height: 0;
+  width: 0;
+  background-image: none; }
+
+ul.clickMenu.button li span.ab:hover {
+  background-position: 50% 0; }
+
+ul.clickMenu.button li > span a {
+  padding: 0; }
+
+ul.clickMenu.button span {
+  padding-right: 5px; }
+
+ul.clickMenu.button li ul.subnav {
+  width: auto; }
+
+ul.clickMenu li a.disabled {
+  color: gray;
+  cursor: default; }
+
 div#searchResults {
   overflow-y: auto;
   padding-bottom: 50px; }
@@ -6562,68 +6651,6 @@ ul.clickMenu > li > span {
 #selectLinkTop, #selectLinkTop .selectActionsDisabled {
   min-width: 32px; }
 
-ul.clickMenu li span.subhover {
-  cursor: pointer; }
-
-ul.clickMenu li ul.subnav,
-ul.clickMenu ul.subnav-sub,
-ul.SugarActionMenuIESub {
-  list-style: none;
-  position: absolute;
-  top: 20px;
-  margin: 0;
-  display: none;
-  float: left;
-  width: auto;
-  border: 1px solid transparent;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  padding: 8px 0;
-  z-index: 10;
-  overflow: hidden; }
-
-ul.clickMenu ul.subnav-sub,
-ul.SugarActionMenuIESub {
-  right: 0; }
-
-ul.clickMenu li ul.subnav {
-  margin-top: 4px;
-  min-width: 128px;
-  right: auto; }
-
-ul.clickMenu li ul.subnav li, ul.clickMenu ul.subnav-sub li, ul.SugarActionMenuIESub li {
-  margin: 0;
-  padding: 0;
-  clear: both;
-  width: 100%;
-  white-space: nowrap; }
-
-ul.clickMenu.subpanel.records {
-  background-color: #eee;
-  border: 1px solid #cccccc;
-  background-image: none; }
-
-ul.clickMenu.subpanel.records li ul.subnav li a span {
-  height: 0;
-  width: 0;
-  background-image: none; }
-
-ul.clickMenu.button li span.ab:hover {
-  background-position: 50% 0; }
-
-ul.clickMenu.button li > span a {
-  padding: 0; }
-
-ul.clickMenu.button span {
-  padding-right: 5px; }
-
-ul.clickMenu.button li ul.subnav {
-  width: auto; }
-
-ul.clickMenu li a.disabled {
-  color: gray;
-  cursor: default; }
-
 .oddListRowS1:hover td ul.clickMenu.subpanel.records li span,
 .evenListRowS1:hover td ul.clickMenu.subpanel.records li span {
   opacity: 1; }
@@ -6643,6 +6670,18 @@ ul#selectLink.clickMenu {
   height: 17px;
   min-width: 20px;
   background-image: none; }
+
+.single a,
+.single > a,
+#actionLinkTop li.sugar_action_button,
+#actionLinkBottom li.sugar_action_button,
+#selectLinkTop li.sugar_action_button,
+#selectLinkBottom li.sugar_action_button {
+  padding: 0px;
+  background-color: #94A6B5;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding-right: 4px; }
 
 td.paginationActionButtons ul.clickMenu #massall,
 ul#selectLink.clickMenu #massall {
